fix: height overflow

--- a/deslrey-admin/src/pages/Admin/index.module.scss
+++ b/deslrey-admin/src/pages/Admin/index.module.scss
@@ -31,7 +31,6 @@
             display: flex;
             height: 100%;
             width: 85%;
-            margin: 2px 0px 0px 2px;
             padding: 10px;
             background-color: rgba(#fff, 0.4);
         }
